--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IDictionary</title>
-    <meta name="IDictionary" content="width=device-width, initial-scale=1">
+    <title>NeuTalk App</title>
+    <meta name="NeuTalk App" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -35,9 +35,9 @@
                 <!-- <button class="header-btn"> Download FREE!</button> -->
             <!-- </a> -->
             <div class="header-right">
-                <a class="navbar-item" href="#team">The Team</a>
+                <a class="navbar-item" href="#team">团队</a>
                 <!-- <a class="navbar-item" href="#pricing">Pricing</a> -->
-                <a class="navbar-item" href="#features">Features</a>
+                <a class="navbar-item" href="#features">特色</a>
             </div>
         </div>
         <!--navigation-->
@@ -48,10 +48,10 @@
 
         <div class="hero row">
             <div class="hero-right col-sm-6 col-sm-6">
-                <h1 class="header-headline bold"> Beautiful Free Dictionary <br></h1>
-                <h4 class="header-running-text light"> A wonderful tool for English learner.</h4>
+                <h1 class="header-headline bold"> NeuTalk 即刻达 <br></h1>
+                <h4 class="header-running-text light"> 基于Gtkmm的即时聊天软件.</h4>
                 <a href="https://github.com/Zeqiang-Lai/IDictionary/releases">
-                    <button class="hero-btn"> Download FREE!</button>
+                    <button class="hero-btn"> 免费下载!</button>
                 </a>
             </div><!--hero-left-->
 
