--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>NeuTalk App</title>
     <meta name="NeuTalk App" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="http://owbw1xx99.bkt.clouddn.com/NeuTalk.ico"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -30,7 +30,7 @@
     </div>
     <div class="container">
         <div class="header-container header">
-            <a class="navbar-brand logo" href="#"> <img class="logo" src="assets/images/logo.svg"/> </a>
+            <a class="navbar-brand logo" href="#"> <img class="logo" src="http://owbw1xx99.bkt.clouddn.com/NeuTalk.ico"/> </a>
             <!-- <a href="https://github.com/Zeqiang-Lai/IDictionary/releases"> -->
                 <!-- <button class="header-btn"> Download FREE!</button> -->
             <!-- </a> -->
@@ -50,13 +50,13 @@
             <div class="hero-right col-sm-6 col-sm-6">
                 <h1 class="header-headline bold"> NeuTalk 即刻达 <br></h1>
                 <h4 class="header-running-text light"> 基于Gtkmm的即时聊天软件.</h4>
-                <a href="https://github.com/Zeqiang-Lai/IDictionary/releases">
+                <a href="https://github.com/Zeqiang-Lai/NeuTalk-App/releases/download/v1.0/Neutalk1.0.zip">
                     <button class="hero-btn"> 免费下载!</button>
                 </a>
             </div><!--hero-left-->
 
             <div class="col-sm-7 col-sm-7 ipad">
-                <img class="ipad-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/screen.png"/>
+                <img class="ipad-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/Untitled@3x.png"/>
             </div>
 
             <!-- <div><img class="mouse" src="assets/images/mouse.svg"/></div> -->
@@ -75,31 +75,31 @@
 
     <div class="features-container row">
 
-        <h2 class="features-headline light">FEATURES</h2>
+        <h2 class="features-headline light">产品特点</h2>
 
         <div class="col-sm-4 feature">
 
             <div class="feature-icon feature-no-display">
                 <img class="feature-img" src="assets/images/fast.svg">
             </div>
-            <h5 class="feature-head-text feature-no-display"> Fast </h5>
-            <p class="feature-subtext light feature-no-display"> Due to the app's simple design, the launch speed is incredible.</p>
+            <h5 class="feature-head-text feature-no-display"> 聊天通讯 </h5>
+            <p class="feature-subtext light feature-no-display"> 基于socket通信的速度极快的聊天通讯系统,包含双人聊天，多人聊天</p>
         </div>
 
         <div class="col-sm-4 feature">
             <div class="feature-icon feature-no-display feature-display-mid">
                 <img class="feature-img" src="assets/images/customizable.svg">
             </div>
-            <h5 class="feature-head-text feature-no-display feature-display-mid"> CUSTOMIZABLE </h5>
-            <p class="feature-subtext light feature-no-display feature-display-mid"> Change the colors or fonts to build your own Dictionary.</p>
+            <h5 class="feature-head-text feature-no-display feature-display-mid"> 消息提醒 </h5>
+            <p class="feature-subtext light feature-no-display feature-display-mid"> 实时更新消息列表并实时提醒 </p>
         </div>
 
         <div class="col-sm-4 feature">
             <div class="feature-icon feature-no-display feature-display-last">
                 <img class="bullet-img" src="assets/images/design.svg">
             </div>
-            <h5 class="feature-head-text feature-no-display feature-display-last"> SLICK AND BEAUTIFUL DESIGN </h5>
-            <p class="feature-subtext light feature-no-display feature-display-last"> Minimal design is only for a better experience.</p>
+            <h5 class="feature-head-text feature-no-display feature-display-last"> 历史记录 </h5>
+            <p class="feature-subtext light feature-no-display feature-display-last"> 支持历史记录功能，可以在线查看与用户的记录 </p>
         </div>
     </div> <!--features-container-->
 </div> <!--features-section-->
@@ -110,19 +110,19 @@
 <div class="white-section row">
 
     <div class="imac col-sm-5">
-        <img class="imac-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/lookup.png">
+        <img class="imac-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/Infobar.png" >
     </div>
     <!--imac-->
 
     <div class="col-sm-6">
 
-        <div class="white-section-text">
+        <div class="white-section-text" >
 
-            <h2 class="imac-section-header light">Look Up Words</h2>
+            <h2 class="imac-section-header light" style="margin-top: 300px;">消息提醒</h2>
 
             <div class="imac-section-desc">
 
-            <span>  Use the IDictionary to search for words, open the software, type the words, press Enter, and leave the rest to us.</span>
+            <span>  主界面支持好友列表的刷新，能够进行双人聊天，多人聊天，实时进行消息提醒。消息提醒显示对方ID。</span>
             </div>
         </div>
     </div>
@@ -141,17 +141,17 @@
 
         <div class="white-section-text">
 
-            <h2 class="imac-section-header light">Words Suggestion</h2>
+            <h2 class="imac-section-header light">实时聊天</h2>
 
             <div class="imac-section-desc">
 
-            <span> Forget words? It doesn't matter. Give us the beginning of the word and we will give the end. </span>
+            <span> 支持用户信息显示，相互发送消息，清空输入文本，查看历史记录。 </span>
             </div>
         </div>
     </div>
 
     <div class="imac col-sm-5 img-right">
-        <img class="imac-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/suggestion.png">
+        <img class="imac-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/chat.png">
     </div>
     <!--imac-->
 
@@ -163,7 +163,7 @@
   <div class="white-section row">
 
     <div class="imac col-sm-5">
-        <img class="imac-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/setting.png">
+        <img class="imac-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/group.png">
     </div>
     <!--imac-->
 
@@ -171,11 +171,11 @@
 
         <div class="white-section-text">
 
-            <h2 class="imac-section-header light">Customizition</h2>
+            <h2 class="imac-section-header light" style="margin-top: 200px;">小组群聊</h2>
 
             <div class="imac-section-desc">
 
-            <span> You can set your own shortcut for quick start. Export the search history into a file.  </span>
+            <span> 支持多人进行同时聊天，包含每个人的个人信息。 </span>
             </div>
         </div>
     </div>
@@ -186,19 +186,14 @@
   ================================================== -->
 
 <div id="team" class="team">
-    <h2 class="team-section-header light text-center">THE TEAM</h2>
+    <h2 class="team-section-header light text-center">团队成员</h2>
 
     <div class="team-container row">
 
         <div class="col-sm-4 team-member">
-           
-        </div>
-
-        <div class="col-sm-4 team-member">
-            <!-- <img src="assets/images/ceo.png"> -->
-            <div class="team-member-text">
-                <h5 class="bold">Zeqiang Lai</h5>
-                <p class="light">The one that puts it all together </p>
+           <div class="team-member-text">
+                <h5 class="bold">赖泽强</h5>
+                <p class="light">我们的组长</p>
                 <a href="https://github.com/Zeqiang-Lai"><img class="team-social-icon" src="assets/images/team-github.svg"></a>
                 <a href="mailto:916323301@qq.com"><img class="team-social-icon"
                                                        src="assets/images/team-email.svg"></a>
@@ -206,6 +201,57 @@
         </div>
 
         <div class="col-sm-4 team-member">
+            <!-- <img src="assets/images/ceo.png"> -->
+            <div class="team-member-text">
+                <h5 class="bold">蒋安立</h5>
+                <p class="light">组员</p>
+                <a href="https://github.com/Zeqiang-Lai"><img class="team-social-icon" src="assets/images/team-github.svg"></a>
+                <a href="mailto:916323301@qq.com"><img class="team-social-icon"
+                                                       src="assets/images/team-email.svg"></a>
+            </div>
+        </div>
+
+        <div class="col-sm-4 team-member">
+            <!-- <img src="assets/images/ceo.png"> -->
+            <div class="team-member-text">
+                <h5 class="bold">金靖轩</h5>
+                <p class="light">组员</p>
+                <a href="https://github.com/Zeqiang-Lai"><img class="team-social-icon" src="assets/images/team-github.svg"></a>
+                <a href="mailto:916323301@qq.com"><img class="team-social-icon"
+                                                       src="assets/images/team-email.svg"></a>
+            </div>
+        </div>
+
+        <div class="col-sm-4 team-member">
+            <!-- <img src="assets/images/ceo.png"> -->
+            <div class="team-member-text">
+                <h5 class="bold">黄天</h5>
+                <p class="light">组员 </p>
+                <a href="https://github.com/Zeqiang-Lai"><img class="team-social-icon" src="assets/images/team-github.svg"></a>
+                <a href="mailto:916323301@qq.com"><img class="team-social-icon"
+                                                       src="assets/images/team-email.svg"></a>
+            </div>
+        </div>
+
+        <div class="col-sm-4 team-member">
+        	<div class="team-member-text">
+                <h5 class="bold">刘文卓</h5>
+                <p class="light">组员</p>
+                <a href="https://github.com/Zeqiang-Lai"><img class="team-social-icon" src="assets/images/team-github.svg"></a>
+                <a href="mailto:916323301@qq.com"><img class="team-social-icon"
+                                                       src="assets/images/team-email.svg"></a>
+            </div>
+        </div>
+
+        <div class="col-sm-4 team-member">
+            <!-- <img src="assets/images/ceo.png"> -->
+            <div class="team-member-text">
+                <h5 class="bold">刘旭东</h5>
+                <p class="light">指导教师</p>
+                <a href="https://github.com/Zeqiang-Lai"><img class="team-social-icon" src="assets/images/team-github.svg"></a>
+                <a href="mailto:916323301@qq.com"><img class="team-social-icon"
+                                                       src="assets/images/team-email.svg"></a>
+            </div>
         </div>
         <! -- .row -->
 
