fix broken image links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>NeuTalk App</title>
     <meta name="NeuTalk App" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="http://owbw1xx99.bkt.clouddn.com/NeuTalk.ico"/>
+    <link rel="shortcut icon" type="image/png" href="assets/images/NeuTalk.ico"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -30,7 +30,7 @@
     </div>
     <div class="container">
         <div class="header-container header">
-            <a class="navbar-brand logo" href="#"> <img class="logo" src="http://owbw1xx99.bkt.clouddn.com/NeuTalk.ico"/> </a>
+            <a class="navbar-brand logo" href="#"> <img class="logo" src="assets/images/NeuTalk.ico"/> </a>
             <!-- <a href="https://github.com/Zeqiang-Lai/IDictionary/releases"> -->
                 <!-- <button class="header-btn"> Download FREE!</button> -->
             <!-- </a> -->
@@ -56,7 +56,7 @@
             </div><!--hero-left-->
 
             <div class="col-sm-7 col-sm-7 ipad">
-                <img class="ipad-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/Untitled@3x.png"/>
+                <img class="ipad-screen img-responsive" src="assets/images/Untitled@3x.png"/>
             </div>
 
             <!-- <div><img class="mouse" src="assets/images/mouse.svg"/></div> -->
@@ -110,7 +110,7 @@
 <div class="white-section row">
 
     <div class="imac col-sm-5">
-        <img class="imac-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/Infobar.png" >
+        <img class="imac-screen img-responsive" src="assets/images/Infobar.png" width="400px">
     </div>
     <!--imac-->
 
@@ -151,7 +151,7 @@
     </div>
 
     <div class="imac col-sm-5 img-right">
-        <img class="imac-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/chat.png">
+        <img class="imac-screen img-responsive" src="assets/images/chat.png">
     </div>
     <!--imac-->
 
@@ -163,7 +163,7 @@
   <div class="white-section row">
 
     <div class="imac col-sm-5">
-        <img class="imac-screen img-responsive" src="http://owbw1xx99.bkt.clouddn.com/group.png">
+        <img class="imac-screen img-responsive" src="assets/images/group.png">
     </div>
     <!--imac-->
 
